tests/bad/type2.c
int main()
{
    bool b = 15;
}
